<resources>
    <string name="app_name">KPLChat</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Log In</string>
    <string name="btn_link_to_register">Don\'t have an account? <b>Register now</b></string>
    <string name="tv_add_friend">Add Friend</string>
    <string name="btn_search_add_friend">Search</string>
    <string name="btn_add_friend">Add</string>
    <string name="tv_add_member">Add Member</string>
    <string name="tv_conversation_detail">Member</string>
</resources>
